sort.basic.comb.AlgCombSort.scala.error
Erreur de compilation :
AlgCombSort:11: error: ';' expected but '{' found.
    };while(i+ecart<len) {
                         ^