sort.basic.comb.AlgCombSort.scala.code
def combSort() {
  var echanger = true
  var len = getNombreValeurs()
  var ecart = getNombreValeurs()
  while(ecart>1 | echanger = true) {
  	do {
    	if (ecart>1) {
      	ecart = ecart/1.3
    	};var i = 0
  	};while(i+ecart<len) {
    	if (plusPetit(i+ecart,i)) {
      	echange(i+ecart,i)
      	echanger = true
    	}
  	}
}
}